<resources>
    <string name="app_name">Bahasain</string>
    <string name="title_home">Home</string>
    <string name="title_cultural">Cultural</string>
    <string name="title_learn">Learn</string>
    <string name="title_dictionary">Dictionary</string>
    <string name="title_profile">Profile</string>

    <string name="btn_continue">CONTINUE</string>
    <string name="btn_skip">SKIP</string>

    <string name="title_onboarding_1">Hi,\nWelcome to BahasaIn!</string>
    <string name="txt_onboarding_1">Your gateway to mastering Bahasa\nIndonesia and exploring its rich culture.</string>

    <string name="title_onboarding_2">Discover Indonesian\nCulture.</string>
    <string name="txt_onboarding_2">Immerse yourself in folklore, history, and\nculinary adventures.</string>

    <string name="title_onboarding_3">Make Learning Fun\nand Interactive</string>
    <string name="txt_onboarding_3">Engage with games, quizzes, and daily\nchallenges while you learn.</string>

    <string name="invalid_email_format">Invalid Email Format.</string>
    <string name="name_length_warning">Name must be more than 3 characters</string>
    <string name="password_length_warning">Password must be at least 8 characters</string>
    <string name="vocab">Vocab</string>
    <string name="title_signin">Hey There\nPlease Sign In!</string>
    <string name="btn_login">Login</string>
    <string name="signup_with">Sign Up with</string>
    <string name="btn_register">Register</string>
    <string name="desc_signup">Already have an account ?</string>
    <string name="title_register">Hey There \nPlease Register!</string>
    <string name="password_same_warning">Password and password confirmation must be the same.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email_address">Email address</string>
    <string name="dont_have_account">Don\'t have an account ?</string>
    <string name="register_now">Register Now</string>
    <string name="btn_forgot_password">Forgot Password?</string>
    <string name="start_with_the_basics">Start with the Basics</string>
    <string name="btn_back">btn_back</string>
    <string name="btn_logout">Logout</string>
    <string name="title_intro_placement">Placement Test</string>
    <string name="title_desc_intro_placement">Take a quick test to determine your Bahasa Indonesia proficiency.</string>
    <string name="title_desc_intro">Jump ahead finding your exact level!</string>
    <string name="desc_intro">It takes approximately 5 minutes and will help place you at the right learning level, from Beginner to Proficient.</string>
    <string name="btn_placement_start">Start Placement Test</string>
    <string name="btn_placement_setLevel">Start from Level 1</string>
    <string name="title_result_placement">You\'re All Set!</string>
    <string name="title_desc_result_placement">Begin at %s Level</string>
    <string name="desc_result_placement">Based on your test results, your journey starts at the %s Level, perfectly tailored to help you progress further in your Bahasa Indonesia learning experience.</string>
    <string name="btn_start_result_placement">Start Learning</string>
    <string name="title_page_dictionary">Dictionary</string>
    <string name="indonesia">Indonesia</string>
    <string name="english">English</string>
    <string name="word_of_the_day">Word of the Day</string>
    <string name="btn_translate">Translate</string>
    <string name="historical_exploration">Historical Exploration</string>
    <string name="interactive_folklore">Interactive Folklore</string>
    <string name="title_daily_trivia">Daily Trivia</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_show_all">Show all</string>
    <string name="historical">Historical</string>
    <string name="lessons_completed">Lessons completed</string>
    <string name="title_module">Module - %s</string>
    <string name="traditional_recipes">Traditional Recipes</string>
    <string name="btn_next_question">Next Question</string>
    <string name="correct_answer">Correct</string>
    <string name="incorrect_answer">Incorrect</string>
    <string name="congratulation">Congratulation</string>
    <string name="btn_back_to_learn">Back To Learn</string>
    <string name="great_job_you_did_it">Great job! You Did It</string>
    <string name="your_score">Your Score</string>
    <string name="progress_amp_achievement"><![CDATA[Progress & Achievement]]></string>
    <string name="certificate">Certificate</string>
    <string name="progress">%s%% %s Level</string>
    <string name="drag_and_drop_to_rearrange">Drag and Drop To Rearrange</string>
    <string name="btn_check">Check</string>
    <string name="descriptions">Descriptions :</string>
    <string name="what_it_means">What It Means</string>
    <string name="answer">Answer :</string>
    <string name="password_uppercase_warning">Password must contain at least one uppercase letter</string>
    <string name="learning_progress">Learning Progress</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="general_notification">General Notification</string>
    <string name="email">Email</string>
    <string name="Name">Name</string>
</resources>