<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bahasain.ui.placement.PlacementIntroActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_intro_placement"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/desc_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_desc_intro_placement"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="42dp"
        android:fontFamily="@font/inter"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:textSize="14sp"/>

    <ImageView
        android:id="@+id/iv_intro"
        android:layout_width="wrap_content"
        android:layout_height="400dp"
        android:src="@drawable/intro_placement"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_title"
        app:layout_constraintBottom_toTopOf="@id/title_desc_intro"/>

    <TextView
        android:id="@+id/title_desc_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/title_desc_intro"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/desc_intro"/>

    <TextView
        android:id="@+id/desc_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desc_intro"
        android:textAlignment="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:textSize="14sp"
        android:fontFamily="@font/inter"
        app:layout_constraintBottom_toTopOf="@id/btn_start"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_placement_start"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_bold"
        android:backgroundTint="@color/blue"
        android:paddingVertical="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_setLevel"/>

    <Button
        android:id="@+id/btn_setLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/btn_placement_setLevel"
        android:layout_marginHorizontal="32dp"
        android:textAllCaps="false"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/inter_bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>