<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bahasain.ui.auth.register.RegisterActivity">

    <FrameLayout
        android:id="@+id/background_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.bahasain.ui.view.BackgroundSign
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="80dp"
            android:layout_marginStart="32dp"
            android:text="@string/title_register"
            android:textSize="32sp"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginHorizontal="32dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/background_sign">

        <com.bahasain.ui.view.EditTextName
            android:id="@+id/edt_text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email_layout"
        android:layout_width="match_parent"
        android:hint="@string/email_address"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/edt_name_layout">

        <com.bahasain.ui.view.EditTextEmail
            android:id="@+id/edt_text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password_layout"
        android:hint="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/edt_email_layout">

        <com.bahasain.ui.view.EditTextPassword
            android:id="@+id/edt_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password_confirm_layout"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@id/edt_password_layout">

        <com.bahasain.ui.view.EditTextPassword
            android:id="@+id/edt_text_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.bahasain.ui.view.ButtonSign
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password_confirm_layout"
        android:layout_marginHorizontal="32dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/btn_register"
        android:layout_marginTop="32dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/btn_register">

        <TextView
            android:id="@+id/title_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_signup"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_login"
            android:textColor="@color/blue"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="8dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>