<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bahasain.ui.setting.SettingActivity">

    <TextView
        android:id="@+id/title_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/setting"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/inter_semibold"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        app:layout_constraintTop_toBottomOf="@id/title_page"
        app:layout_constraintStart_toStartOf="@id/title_page"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/name_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        app:layout_constraintTop_toBottomOf="@id/account"
        app:layout_constraintStart_toStartOf="@id/account"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/name_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/name_layout"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/inter"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_notification"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        app:layout_constraintStart_toStartOf="@id/title_page"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch_notif"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/notifications"
        app:layout_constraintBottom_toBottomOf="@id/notifications"
        android:layout_marginEnd="16dp"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="32dp"
        android:textAllCaps="false"
        android:fontFamily="@font/inter_medium"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>