<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bahasain.ui.placement.PlacementResultActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_result_placement"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:textSize="24sp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/iv_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/result_placement"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/title_desc_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_desc_result_placement"
        app:layout_constraintTop_toBottomOf="@id/iv_result"
        android:gravity="center"
        android:fontFamily="@font/inter_semibold"
        android:layout_marginTop="32dp"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/desc_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/desc_result_placement"
        app:layout_constraintTop_toBottomOf="@id/title_desc_result"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:fontFamily="@font/inter"
        android:layout_marginHorizontal="32dp"/>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_result_placement"
        android:fontFamily="@font/inter_semibold"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/desc_result"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>