<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bahasain.ui.auth.login.LoginActivity">

    <FrameLayout
        android:id="@+id/background_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.bahasain.ui.view.BackgroundSign
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginTop="80dp"
            android:layout_marginStart="32dp"
            android:text="@string/title_signin"
            android:textSize="32sp"
            android:textColor="@android:color/white" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_email_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/background_sign">

        <com.bahasain.ui.view.EditTextEmail
            android:id="@+id/edt_text_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/password"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/edt_email_layout">

        <com.bahasain.ui.view.EditTextPassword
            android:id="@+id/edt_text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.bahasain.ui.view.ButtonSign
        android:id="@+id/btn_sign"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password_layout"
        android:layout_marginHorizontal="32dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:text="@string/btn_login"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/tv_signup_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_with"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/btn_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/icon_social"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_signup_with">

        <ImageButton
            android:id="@+id/btn_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_google"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/btn_discord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_discord"
            android:layout_marginStart="32dp"
            android:background="@android:color/transparent"/>

        <ImageButton
            android:id="@+id/btn_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_facebook"
            android:background="@android:color/transparent"
            android:layout_marginStart="32dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/icon_social">

        <TextView
            android:id="@+id/dont_have"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account"/>

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_now"
            android:textColor="@color/blue"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>