<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bahasain.ui.learn.quiz.QuizResultActivity">

    <TextView
        android:id="@+id/title_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/congratulation"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/score_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_page"
        app:layout_constraintBottom_toTopOf="@id/tv_great">

        <ImageView
            android:id="@+id/iv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_result_score" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/inter"
                android:text="@string/your_score"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/inter_bold"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:text="100" />

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/tv_great"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/great_job_you_did_it"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/back"
        app:layout_constraintTop_toBottomOf="@id/score_layout" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:background="@drawable/bg_corner_10"
        android:text="@string/btn_back_to_learn"
        android:textAllCaps="false"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>