<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    tools:context="com.bahasain.ui.profile.ProfileFragment">

    <TextView
        android:id="@+id/title_page"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_profile"
        android:fontFamily="@font/inter_bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_page">

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/icon_profile"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/icon_profile" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/inter_semibold"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/tv_level"
                app:layout_constraintStart_toEndOf="@id/iv_profile"
                app:layout_constraintTop_toTopOf="@id/iv_profile"
                tools:text="Imanuella Yesha" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/tab_indicator"
                android:fontFamily="@font/inter_semibold"
                android:paddingHorizontal="16dp"
                android:paddingVertical="2dp"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/iv_profile"
                app:layout_constraintStart_toEndOf="@id/iv_profile"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                tools:text="level" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_progressAchievement_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/progress_amp_achievement"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/profile_layout"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/inter_bold"
            android:background="@drawable/bg_corner_10"
            android:backgroundTint="@color/blue_200"
            android:paddingVertical="12dp"/>

    <LinearLayout
        android:id="@+id/progress_layout"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/bg_corner_10"
        android:backgroundTint="@color/gray_light"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_progressAchievement_layout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_progres"/>

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_semibold"
            android:textSize="14sp"
            android:gravity="center"
            tools:text="75 Beginner Level"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/title_certificate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/certificate"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/progress_layout"
        android:layout_marginTop="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_certivicate"
        app:layout_constraintTop_toBottomOf="@id/title_certificate"
        android:layout_marginTop="8dp"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>